2008-02-24  John W. Eaton  <jwe@octave.org>

	* specfun/log2.m: Ensure returned value of F strictly less than 1.
	From Dave Hawthorne <davehawthorne@ieee.org>.

2008-02-22  Ben Abbott  <bpabbott@mac.com>

	* specfun/legendre.m: Doc fix.

2008-02-22  David Bateman  <dbateman@free.fr>

	* sparse/pcg.m, sparse/spdiags, spstats.m: Remove references to
	spdiag.
	
2008-02-22  John W. Eaton  <jwe@octave.org>

	* miscellaneous/fullfile.m: Improve handling of empty args and
	args ending with filesep.

	* control/base/__stepimp__.m: Don't use subplot for just one plot.

2008-02-21  John W. Eaton  <jwe@octave.org>

	* image/imshow.m: Call axis ("image").
	From Michael G. Ross <mgross@MIT.EDU>.

	* plot/errorbar.m: If nargout > 0, return vector of handles to
	line objects.
	* plot/__go_draw_axes__.m: Improve handling of line style for
	errorbar plots.

2008-02-20  Marco Caliari <marco.caliari@univr.it>

	* specfun/legendre.m: Accept normalization options ("sch", "norm"),
	and improve stability for higher orders.

2008-02-20  John W. Eaton  <jwe@octave.org>

	* strings/strcat.m: Detect cellstr args.

2008-02-20  David Bateman  <dbateman@free.fr>

	* sparse/colperm.m, sparse/nonzero.m, sparse/spdiags.m,
	sparse/spfun.m, sparse/spones.m, sparse/sprand.m,
	sparse/sprandn.m, sparse/sprandsym.m, sparse/spy.m: Use generic
	version of find rather than spfind.

2008-02-19  Ben Abbott  <bpabbott@mac.com>

	* miscellaneous/edit.m: New option EDITINPLACE.  Prefer file list
	rather than path list.  Return option structure with "get all".

	* polynomial/polyfit.m: Use QR decomposition.  Handle
	normalization option.
	* polynomial/polyval.m: Normalize dependent variable.  Optionally
	generate 50% prediction intervals.

	* miscellaneous/ver.m: Include package version information in
	output.  Improve consistency with Matlab.

2008-02-19  John W. Eaton  <jwe@octave.org>

	* pkg/pkg.m: Style fixes.

2008-02-19 Carlo de Falco <carlo.defalco@gmail.com>

	* pkg/pkg.m: Handle 'describe' command.