@@ -66,6 +66,7 @@ Soren Hauberg
 Dave Hawthorne
 Daniel Heiserer
 Yozo Hida
+Ryan Hinton
 Roman Hodek
 A. Scottedward Hodel
 Richard Allan Holcombe
