@@ -124,12 +124,12 @@ function filelist = unpack (file, directory, filetype)
     commandlist.tar = {"tar -x -v -f \"%s\"", ...
 		       "tar -x -f \"%s\"", ...
 		       @__parse_tar__, false};
-    commandlist.targz = {"gzip -d -c \"%s\" | tar -x -v", ...
-			 "gzip -d -c \"%s\" | tar -x", ...
+    commandlist.targz = {"gzip -d -c \"%s\" | tar -x -v -f -", ...
+			 "gzip -d -c \"%s\" | tar -x -f -", ...
 			 @__parse_tar__, false};
     commandlist.tgz = commandlist.targz;
-    commandlist.tarbz2 = {"bzip2 -d -c \"%s\" | tar -x -v", ...
-			  "bzip2 -d -c \"%s\" | tar -x", ...
+    commandlist.tarbz2 = {"bzip2 -d -c \"%s\" | tar -x -v -f -", ...
+			  "bzip2 -d -c \"%s\" | tar -x -f -", ...
 			  @__parse_tar__, false};
     commandlist.tarbz = commandlist.tarbz2;
     commandlist.tbz2 = commandlist.tarbz2;
