@@ -1,3 +1,7 @@
+2008-02-25  Ryan Hinton  <rwh4s@virginia.edu>
+
+	* miscellaneous/unpack.m: Use "-f -" args for tar.
+
 2008-02-24  John W. Eaton  <jwe@octave.org>
 
 	* specfun/log2.m: Ensure returned value of F strictly less than 1.
